--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 
 video {
     border-radius: 5px;
+    z-index: 0;
+    position: relative;
 }
 
 .forward{
@@ -27,6 +29,7 @@ video {
     bottom: 48%;
     left: 70%;
     scale: 0;
+    cursor: pointer;
 }
 
 .wrapper:hover .forward {
@@ -35,11 +38,12 @@ video {
 }
 
 .backward {
-    rotate: 180deg;
+    transform: rotate(180deg);
     position: absolute;
     bottom: 48%;
     right: 70%;
     scale: 0;
+    cursor: pointer;
 }
 
 .wrapper:hover .backward {
@@ -52,6 +56,7 @@ video {
     bottom: 48%;
     right: 90%;
     scale: 0;
+    cursor: pointer;
 }
 
 .wrapper:hover .prev {
@@ -60,11 +65,13 @@ video {
 }
 
 .next {
-    rotate: 180deg;
+    transform: rotate(180deg);
     position: absolute;
     bottom: 48%;
     left: 90%;
     scale: 0;
+    z-index: 2;
+    cursor: pointer;
 }
 
 .wrapper:hover .next {
